syntax = "proto3";

package user;

option go_package = "./;user";

service User{
  rpc RegisterUser (RegisterUserReq) returns (RegisterUserResp) {}
  rpc Login (LoginReq) returns (LoginResp) {}
  rpc Cancellation (CancellationReq) returns (CancellationResp) {}
  rpc UploadImg (UploadImgReq) returns (UploadImgResp) {}
  rpc GetUserList (GetUserListReq) returns (GetUserListResp) {}
  rpc UserInfo (UserInfoReq) returns (UserInfoResp) {}
}

enum UserSex {
  Male = 0;
  Female = 1;
}

enum week{
    Sunday = 0;
    Monday =1;
    Tuesday = 2;
    Wednesday=3;
    Thursday=4;
    Friday=5;
    Saturday=6;
}

message RegisterUserReq {
  string UserName = 1;
  string Pwd = 2;
  UserSex Sex = 4;
  Info Info = 5;
  Class class = 6;
  week week = 7;
  Msg msg = 8;
  Article article=9;
  Student student=10;
}


message Student{
  int64              id    = 1; //id
  string             name  = 2; //学生姓名
  map<string, int32> score = 3;  //学科 分数的map
}

message Article {
  string url = 1;
  string title = 2;
  repeated string tags = 3;
}

message Msg {
  repeated int32 arrays = 1;
}

message Info {
  string Data = 1;
  string Name = 2;
}

message Class {
  string id = 1;
  string name = 2;
}


message RegisterUserResp{
  string UserName = 1;
  uint32 ID = 3;
}




message LoginReq{
  string UserName = 1;
  string P = 2;
}

message LoginResp{
  string UserName = 1;
  uint32 ID = 3;
  string Token = 4;
}

message CancellationReq{
  string Token = 1;
}

message CancellationResp{
  string message = 1;
}

enum UserListSort{
  ASC = 0;
  Desc = 1;
}

message GetUserListReq{
  uint32 Page = 1;
  uint32 Size = 2;
  UserListSort Sort = 3;
}

message UserInfo{
  string UserName = 1;
  uint32 ID = 3;
  uint32 W = 4;
  uint32 A = 5;
  uint32 G = 6;
  uint32 T = 7;

}

message GetUserListResp{
  repeated UserInfo UserInfo = 1;
}

message UserInfoReq{
  uint32 ID = 1;
}

message UserInfoResp{
  string UserName = 1;
  uint32 ID = 3;
}

enum UploadImgType{
  PNG = 0;
  JPG = 1;
}

message UploadImgReq {
  UploadImgType FileType = 1;
  bytes img = 2;
}

enum UploadStatusCode {
  Unknown = 0;
  Ok = 1;
  Failed = 2;
}

message UploadImgResp {
  string Message = 1;
  UploadStatusCode Code = 2;
}